@@ -17,6 +17,7 @@
 package org.qubership.integration.platform.runtime.catalog.service.exportimport.mapper.chain;
 
 import org.apache.commons.collections4.CollectionUtils;
+import org.codehaus.plexus.util.StringUtils;
 import org.qubership.integration.platform.runtime.catalog.model.exportimport.chain.*;
 import org.qubership.integration.platform.runtime.catalog.persistence.configs.entity.chain.*;
 import org.qubership.integration.platform.runtime.catalog.persistence.configs.entity.chain.element.ChainElement;
@@ -137,7 +138,8 @@ public class ChainExternalEntityMapper implements ExternalEntityMapper<Chain, Ch
                         .businessDescription(chain.getBusinessDescription())
                         .assumptions(chain.getAssumptions())
                         .outOfScope(chain.getOutOfScope())
-                        .labels(chain.getLabels().stream().map(ChainLabel::getName).collect(Collectors.toList()))
+                        .labels(chain.getLabels().stream().filter(label -> !label.isTechnical())
+                                .map(ChainLabel::getName).toList())
                         .folder(createFolderExternalEntity(chain))
                         .maskedFields(createMaskedFieldExternalEntities(chain.getMaskedFields()))
                         .defaultSwimlaneId(
@@ -320,7 +322,9 @@ public class ChainExternalEntityMapper implements ExternalEntityMapper<Chain, Ch
     private Set<MaskedFieldExternalEntity> createMaskedFieldExternalEntities(Set<MaskedField> maskedFields) {
         return maskedFields.stream()
                 .map(maskedField -> new MaskedFieldExternalEntity(maskedField.getId(), maskedField.getName()))
-                .collect(Collectors.toSet());
+                .filter(entity -> StringUtils.isNotBlank(entity.getName()))
+                .sorted(Comparator.comparing(MaskedFieldExternalEntity::getName))
+                .collect(Collectors.toCollection(LinkedHashSet::new));
     }
 
     private Map<String, ChainElement> extractAllElements(List<ChainElement> elements) {
